--- a/date/Base.lproj/Main.storyboard
+++ b/date/Base.lproj/Main.storyboard
@@ -44,13 +44,13 @@
                     <navigationItem key="navigationItem" id="xby-2j-eF2">
                         <barButtonItem key="rightBarButtonItem" title="+" id="dSb-2y-dC1" userLabel="Add">
                             <connections>
-                                <segue destination="CYx-U2-xow" kind="showDetail" identifier="nextView" action="showViewController:sender:" id="Erx-pr-lgN"/>
+                                <segue destination="CYx-U2-xow" kind="showDetail" id="CCy-MM-ww8"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="table" destination="jBX-cR-lc2" id="Y3Y-ba-3uv"/>
-                        <segue destination="CYx-U2-xow" kind="presentation" id="0Bb-Fd-E4K"/>
+                        <outlet property="table" destination="jBX-cR-lc2" id="b3J-Yo-LLy"/>
+                        <segue destination="CYx-U2-xow" kind="presentation" id="zYd-Gc-UJf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gh5-cJ-vOr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -98,7 +98,7 @@
                     <navigationItem key="navigationItem" id="uZH-T7-AsG"/>
                     <connections>
                         <outlet property="togoTextField" destination="FDf-hg-O9E" id="MhZ-KT-ocN"/>
-                        <outlet property="whenTextField" destination="euq-Cs-0Bb" id="tRI-Ce-mGr"/>
+                        <outlet property="whenTextField" destination="euq-Cs-0Bb" id="lqB-94-dLH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CIv-D4-3Gd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -110,7 +110,6 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tct-PX-Rni" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="KDi-pp-nDU"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Fyv-b7-C6y">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -130,6 +129,6 @@
         <image name="アートボード 4.png" width="750" height="1334"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Erx-pr-lgN"/>
+        <segue reference="zYd-Gc-UJf"/>
     </inferredMetricsTieBreakers>
 </document>
