--- a/date/Base.lproj/Main.storyboard
+++ b/date/Base.lproj/Main.storyboard
@@ -49,13 +49,13 @@
                     <navigationItem key="navigationItem" id="xby-2j-eF2">
                         <barButtonItem key="rightBarButtonItem" title="+" id="dSb-2y-dC1" userLabel="Add">
                             <connections>
-                                <segue destination="CYx-U2-xow" kind="show" id="13b-PX-kMo"/>
+                                <segue destination="CYx-U2-xow" kind="presentation" id="Hhe-nP-fWz"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="table" destination="jBX-cR-lc2" id="b3J-Yo-LLy"/>
-                        <segue destination="CYx-U2-xow" kind="showDetail" identifier="toTogoViewController" id="dFw-4d-3qO"/>
+                        <segue destination="CYx-U2-xow" kind="show" identifier="toTogoViewController" id="dFw-4d-3qO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gh5-cJ-vOr" userLabel="First Responder" sceneMemberID="firstResponder"/>
